feat: project week two
