# src/main/java/com/vasquez/msaccount/proxy/model/ProductResponse.java
@@ -1,0 +1,14 @@
+package com.vasquez.msaccount.proxy.model;
+
+import lombok.Data;
+
+@Data
+public class ProductResponse {
+
+    private String productId;
+
+    private String productTypeId;
+
+    private String name;
+
+}
